[workspace]
[package]
version = "0.1.0"
name = "hello-script"
edition = "2021"

[dependencies]
# sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git", branch = "main" }
sp1-sdk = { path = "../../sp1/sdk" }
sp1-core = { path = "../../sp1/core" }
revm = { git = "https://github.com/sp1-patches/revm", branch = "patch-v5.0.0", features = ["std"], default-features = false }

[build-dependencies]
sp1-helper = { path = "../../sp1/helper" }
